Code review changes, fix README.md, add Constants